# Bms_starter

./: CMakeLists.txt  README.md
fw/app/: balance.c  balance.h  bms_main.c  diag.c  diag.h  soc.c  soc.h  state_machine.c  state_machine.h
fw/cfg/: pack_cfg.h
fw/drviers/: can.c  can.h  eeprom.c  eeprom.h  ina226.c  ina226.h  ltc6804.c  ltc6804.h
fw/hal/: board.h
fw/os/: os_port.c  os_port.h
fw/tests/: test_vectors.c
